Update algorithm folder

--- a/algorithm/problem solving reviews/[Python] 백준 - 11660 구간 합 구하기 5.md
+++ b/algorithm/problem solving reviews/[Python] 백준 - 11660 구간 합 구하기 5.md
@@ -8,7 +8,7 @@ ___
 ### 📃 문제 설명
 
 
-![](https://images.velog.io/images/ready2start/post/01cfc271-e9a0-448f-8431-317a70cee203/pyo.png)
+![](../algorithm.assets/pyo.png)
 
 숫자들로 채워진 N x N의 표가 있고, 두 개의 좌표 `(x1, y1)`, `(x2, y2)`가 주어지면 `(x1, y1)`부터 `(x2, y2)`까지의 합을 구해야 한다. `(x, y)`는 x행 y열을 의미한다.
 
@@ -31,7 +31,7 @@ ___
 
 ### 🔑 해결 방법
 
-![](https://images.velog.io/images/ready2start/post/3f3e4ff4-9cf3-4fee-a4f5-a8d4fd483c81/%EA%B7%B8%EB%A6%BC%ED%8C%90.png)
+![](../algorithm.assets/prefix_sum.png)
 
 1행부터 `(x, y)`까지의 합을 구하고 나면 `(x1, y1)`부터 `(x2, y2)`까지의 합을 구하기 쉬워진다. 
 
